# pants-backends

./: .dir-locals.el  .flake8  .gitignore  BUILD  README.md  pants.ci.toml  pants.toml  pre-commit.sh  pyproject.toml
.github/: copilot-instructions.md  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.json  copilot-setup-steps.yml  cores.yaml  create-labels.yaml  docs.yml  labeler.yaml  main.yml  pre-release.yaml  release.yaml
bugs/: BUILD.oci-tuple-index-package
docs/: BUILD  book.toml
docs/src/: SUMMARY.md  k8s-changelog.md  k8s-readme.md  kustomize-changelog.md  kustomize-readme.md  mdbook-changelog.md  mdbook-readme.md  oci-changelog.md  oci-mirror.md  oci-readme.md
docs/src/bitwarden/: changelog.md  readme.md
docs/src/secrets/: changelog.md  readme.md
example/: README.md
examples/: macros.py
examples/bitwarden/: BUILD
examples/deb/: BUILD
examples/k8s/kubeconfig/: BUILD  gen.py
examples/k8s/welcome/: BUILD  namespace.yaml
examples/kustomize/welcome/: BUILD  kustomization.yaml  server.py
examples/kustomize/welcome/base/: BUILD  deployment.yaml  kustomization.yaml  service.yaml
examples/mdbook/: BUILD
examples/oci/: BUILD  example.py  example2.py
examples/oci/file/: BUILD  foo.py  start.sh
examples/oci/layers/: BUILD  app.py
examples/oci/multistage/: BUILD  app.py  requirements.txt
examples/odin/: BUILD  README.md  lib.odin  main.odin  test_example.odin
examples/odin/lib/math/: BUILD  operations.odin
examples/odin/lib/utils/: BUILD  helpers.odin
pants-plugins/: BUILD  lock.txt
pants-plugins/bitwarden/: BUILD  CHANGELOG.md  README.md  pyproject.toml
pants-plugins/bitwarden/pants_backend_bitwarden/: register.py  subsystem.py  subsystem_test.py  targets.py
pants-plugins/bitwarden/pants_backend_bitwarden/goals/: decrypt.py  run.py
pants-plugins/bitwarden/pants_backend_bitwarden/pants_ext/: env_secret_provider.py  exception.py  publish_secret_python.py  secret.py  secret_request.py
pants-plugins/bitwarden/pants_backend_bitwarden/pants_ext/goals/: decrypt.py
pants-plugins/bitwarden/pants_backend_bitwarden/util_rules/: secret.py
pants-plugins/k8s/: BUILD  CHANGELOG.md  README.md  pyproject.toml
pants-plugins/k8s/pants_backend_k8s/: register.py  subsystem.py  target_generators.py  target_types.py
pants-plugins/k8s/pants_backend_k8s/goals/: run.py
pants-plugins/k8s/pants_backend_k8s/util/: kubeconfig.py  kubeconfig_test.py
pants-plugins/kustomize/: BUILD  CHANGELOG.md  LICENSE-MIT.txt  README.md  pyproject.toml
pants-plugins/kustomize/pants_backend_kustomize/: BUILD  codegen.py  register.py  requests.py  subsystem.py  target_types.py
pants-plugins/kustomize/pants_backend_kustomize/goals/: tailor.py
pants-plugins/kustomize/pants_backend_kustomize/util_rules/: prepare_context.py
pants-plugins/mdbook/: BUILD  CHANGELOG.md  README.md  pyproject.toml
pants-plugins/mdbook/pants_backend_mdbook/: register.py  subsystem.py  subsystem_test.py  target_types_rules.py  targets.py
pants-plugins/mdbook/pants_backend_mdbook/goals/: __init__.py  package.py
pants-plugins/mdbook/pants_backend_mdbook/util_rules/: __init__.py  build.py  prepare.py
pants-plugins/oci/: BUILD  BUILD.b  CHANGELOG.md  README.md  pdm_build.py  pyproject.toml
pants-plugins/oci/pants_backend_oci/: register.py  requirements.txt  subsystem.py  subsystem_test.py  synthetic_targets.py  synthetic_targets_test.py  target_types.py  targets.py
pants-plugins/oci/pants_backend_oci/goals/: BUILD  __init__.py  package.py  package_build_step.py  publish.py  publish_test.py  run.py  run_integration_test.py  test.py  test_integration_test.py
pants-plugins/oci/pants_backend_oci/language_target/: __init__.py  python.py
pants-plugins/oci/pants_backend_oci/rules/: kustomize_inject.py
pants-plugins/oci/pants_backend_oci/subsystems/: BUILD  test.py
pants-plugins/oci/pants_backend_oci/tools/: process.py
pants-plugins/oci/pants_backend_oci/util_rules/: BUILD  __init__.py  archive.py  binaries.py  build_image_artifact.py  build_image_bundle.py  configure.py  copy.py  deb_layer.py  empty_image_bundle.py  empty_image_integration_test.py  empty_image_test.py  image_bundle.py  jq.py  layer.py  oci_sha.py  pull_image_bundle.py  run.py  tools.py  unpack.py
pants-plugins/oci/pants_backend_oci/utility/mirror/: README.md  register.py  targets.py
pants-plugins/oci/pants_backend_oci/utility/mirror/goals/: package.py  publish.py
pants-plugins/odin/: BUILD  CHANGELOG.md  LICENSE-MIT.txt  PACKAGE_GOAL.md  README.md  pyproject.toml
pants-plugins/odin/pants_backend_odin/: BUILD  dependency_inference.py  dependency_inference_test.py  register.py  subsystem.py  subsystem_test.py  target_types.py
pants-plugins/odin/pants_backend_odin/goals/: fmt.py  fmt_simple.py  lint.py  package.py  package_test.py  run.py  run_test.py  tailor.py  tailor_test.py  test.py  test_test.py
pants-plugins/odin/pants_backend_odin/util_rules/: __init__.py  build.py  sandbox.py  sandbox_test.py
pants-plugins/pants_backend_mdbook/: register.py
pants-plugins/pants_backend_mdbook/goals/: package.py
pants-plugins/secrets/: BUILD  CHANGELOG.md  README.md  pyproject.toml
pants-plugins/secrets/pants_backend_secrets/: env_secret_provider.py  exception.py  publish_secret_python.py  register.py  secret.py  secret_request.py  targets.py
pants-plugins/secrets/pants_backend_secrets/goals/: decrypt.py
src/py/pants-plugin-deb/: CHANGELOG.md  README.md  pyproject.toml
src/py/pants-plugin-deb/pants_plugin_deb/: register.py  requirements.txt  subsystem.py  target_generators.py  targets.py
src/py/pants-plugin-deb/pants_plugin_deb/goals/: lockfile.py  package.py
