[project]
name = "pants_backend_bitwarden"
description = "A Bitwarden plugin for the Pants build system"
version = "0.1.0"
authors = [
    { name = "Tom Solberg", email = "me@sbg.dev" }
]

dependencies = [
    "pants_backend_secrets>=0.1.0"
]

readme = "README.md"
license = {file = "LICENSE-MIT.txt"}
keywords = ["pantsbuild", "pants", "backend", "bitwarden"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Repository = "https://github.com/tgolsson/pants-backends"
Code = "https://github.com/tgolsson/pants-backends/tree/main/pants-plugins/bitwarden"
Changelog = "https://github.com/tgolsson/pants-backends/tree/main/pants-plugins/bitwarden/CHANGELOG.md"

[tool.pdm.build]
includes = [
    "pants_backend_bitwarden",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = "black"

known_first_party = ["pants_backend_bitwarden"]
line_length = 100
include_trailing_comma = true

[tool.black]
line-length = 100
