[project]
name = "pants_backend_oci"
description = "An OCI plugin for the Pants build system"
version = "0.6.0"
authors = [
    { name = "Tom Solberg", email = "me@sbg.dev" }
]

dependencies = [
    "pants-backend-kustomize>=0.2"
]

readme = "README.md"
license = {file = "LICENSE-MIT.txt"}
keywords = ["pantsbuild", "pants", "docker", "oci", "container"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Topic :: Software Development :: Build Tools",
]


[project.urls]
Repository = "https://github.com/tgolsson/pants-backends"
Code = "https://github.com/tgolsson/pants-backends/tree/main/pants-plugins/oci"
Changelog = "https://github.com/tgolsson/pants-backends/tree/main/pants-plugins/oci/CHANGELOG.md"

[tool.pdm.build]
includes = [
    "pants_backend_oci",
]
excludes = ["**/BUILD"]

[build-system]
requires = ["pdm-backend>=1.0.0"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

known_first_party = ["pants_backend_oci"]
line_length = 100
include_trailing_comma = true

[tool.black]
line-length = 110
preview = true
