[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pants-backend-odin"
version = "0.1.0"
description = "A Pants backend for Odin language"
authors = [{name = "Pants Backends Team"}]
readme = "README.md"
license = {file = "LICENSE-MIT.txt"}
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/tgolsson/pants-backends"
Repository = "https://github.com/tgolsson/pants-backends.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["pants_backend_odin*"]

[tool.setuptools.package-data]
"pants_backend_odin" = ["py.typed"]