[project]
name = "pants_backend_secrets"
description = "A secrets plumbing plugin for the Pants build system"
version = "0.5.0"
authors = [
    { name = "Tom Solberg", email = "me@sbg.dev" }
]

dependencies = [

]

readme = "README.md"
license = {file = "LICENSE-MIT.txt"}
keywords = ["pantsbuild", "pants", "backend", "secrets"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Repository = "https://github.com/tgolsson/pants-backends"
Code = "https://github.com/tgolsson/pants-backends/tree/main/pants-plugins/secrets"
Changelog = "https://github.com/tgolsson/pants-backends/tree/main/pants-plugins/secrets/CHANGELOG.md"

[tool.pdm.build]
includes = [
    "pants_backend_secrets",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = "black"

known_first_party = ["pants_backend_secrets"]
line_length = 100
include_trailing_comma = true

[tool.black]
line-length = 100
